ass6_13CS10061/y.output
Terminals unused in grammar

   SIZEOF_KEYWORD
   STRUCT_KEYWORD
   UNION_KEYWORD


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | FLOAT_CONSTANT
    4                   | CHAR_CONSTANT
    5                   | STRING_LITERAL
    6                   | '(' expression ')'

    7 postfix_expression: primary_expression
    8                   | postfix_expression '[' expression ']'
    9                   | postfix_expression '(' ')'
   10                   | postfix_expression '(' argument_expression_list ')'
   11                   | postfix_expression '.' IDENTIFIER
   12                   | postfix_expression VAL_AT IDENTIFIER
   13                   | postfix_expression PLUS_PLUS
   14                   | postfix_expression MINUS_MINUS
   15                   | '(' type_name ')' '{' initializer_list '}'
   16                   | '(' type_name ')' '{' initializer_list ',' '}'

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 unary_expression: postfix_expression
   20                 | PLUS_PLUS unary_expression
   21                 | MINUS_MINUS unary_expression
   22                 | unary_operator cast_expression

   23 unary_operator: '&'
   24               | '*'
   25               | '+'
   26               | '-'
   27               | '~'
   28               | '!'

   29 cast_expression: unary_expression
   30                | '(' type_name ')' cast_expression

   31 multiplicative_expression: cast_expression
   32                          | multiplicative_expression '*' cast_expression
   33                          | multiplicative_expression '/' cast_expression
   34                          | multiplicative_expression '%' cast_expression

   35 additive_expression: multiplicative_expression
   36                    | additive_expression '+' multiplicative_expression
   37                    | additive_expression '-' multiplicative_expression

   38 shift_expression: additive_expression
   39                 | shift_expression LEFT_SHIFT additive_expression
   40                 | shift_expression RIGHT_SHIFT additive_expression

   41 relational_expression: shift_expression
   42                      | relational_expression '<' shift_expression
   43                      | relational_expression '>' shift_expression
   44                      | relational_expression LESS_EQUAL shift_expression
   45                      | relational_expression GREATER_EQUAL shift_expression

   46 equality_expression: relational_expression
   47                    | equality_expression EQUAL_EQUAL relational_expression
   48                    | equality_expression NOT_EQUAL relational_expression

   49 and_expression: equality_expression
   50               | and_expression '&' equality_expression

   51 exclusive_or_expression: and_expression
   52                        | exclusive_or_expression '^' and_expression

   53 inclusive_or_expression: exclusive_or_expression
   54                        | inclusive_or_expression '|' exclusive_or_expression

   55 logical_and_expression: inclusive_or_expression
   56                       | logical_and_expression LOGICAL_AND M inclusive_or_expression

   57 logical_or_expression: logical_and_expression
   58                      | logical_or_expression LOGICAL_OR M logical_and_expression

   59 conditional_expression: logical_or_expression
   60                       | logical_or_expression N '?' M expression N ':' M conditional_expression

   61 assignment_expression: conditional_expression
   62                      | unary_expression assignment_operator assignment_expression

   63 assignment_operator: '='
   64                    | STAR_EQUAL
   65                    | BY_EQUAL
   66                    | PERCENT_EQUAL
   67                    | PLUS_EQUAL
   68                    | MINUS_EQUAL
   69                    | LEFT_SHIFT_EQUAL
   70                    | RIGHT_SHIFT_EQUAL
   71                    | AND_EQUAL
   72                    | BITWISENOT_EQUAL
   73                    | OR_EQUAL

   74 expression: assignment_expression
   75           | expression ',' assignment_expression

   76 constant_expression: conditional_expression

   77 declaration: declaration_specifiers ';'
   78            | declaration_specifiers init_declarator_list ';'

   79 declaration_specifiers: storage_class_specifier
   80                       | storage_class_specifier declaration_specifiers

   81 $@1: %empty

   82 declaration_specifiers: type_specifier $@1
   83                       | type_specifier declaration_specifiers
   84                       | type_qualifier
   85                       | type_qualifier declaration_specifiers
   86                       | function_specifier
   87                       | function_specifier declaration_specifiers

   88 init_declarator_list: init_declarator
   89                     | init_declarator_list ',' init_declarator

   90 init_declarator: declarator
   91                | declarator '=' initializer

   92 storage_class_specifier: TYPEDEF_KEYWORD
   93                        | EXTERN_KEYWORD
   94                        | STATIC_KEYWORD
   95                        | AUTO_KEYWORD
   96                        | REGISTER_KEYWORD

   97 type_specifier: VOID_KEYWORD
   98               | CHAR_KEYWORD
   99               | SHORT_KEYWORD
  100               | INT_KEYWORD
  101               | LONG_KEYWORD
  102               | FLOAT_KEYWORD
  103               | DOUBLE_KEYWORD
  104               | SIGNED_KEYWORD
  105               | UNSIGNED_KEYWORD
  106               | BOOL_KEYWORD
  107               | COMPLEX_KEYWORD
  108               | IMAGINARY_KEYWORD

  109 specifier_qualifier_list: type_specifier specifier_qualifier_list
  110                         | type_specifier
  111                         | type_qualifier specifier_qualifier_list
  112                         | type_qualifier

  113 type_qualifier: CONST_KEYWORD
  114               | RESTRICT_KEYWORD
  115               | VOLATILE_KEYWORD

  116 function_specifier: INLINE_KEYWORD

  117 declarator: pointer direct_declarator
  118           | direct_declarator

  119 direct_declarator: IDENTIFIER
  120                  | '(' declarator ')'
  121                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  122                  | direct_declarator '[' assignment_expression ']'
  123                  | direct_declarator '[' type_qualifier_list ']'
  124                  | direct_declarator '[' ']'
  125                  | direct_declarator '[' STATIC_KEYWORD type_qualifier_list assignment_expression ']'
  126                  | direct_declarator '[' STATIC_KEYWORD assignment_expression ']'
  127                  | direct_declarator '[' type_qualifier_list STATIC_KEYWORD assignment_expression ']'
  128                  | direct_declarator '[' type_qualifier_list '*' ']'
  129                  | direct_declarator '[' '*' ']'
  130                  | direct_declarator '(' parameter_type_list ')'
  131                  | direct_declarator '(' identifier_list ')'
  132                  | direct_declarator '(' ')'

  133 pointer: '*'
  134        | '*' type_qualifier_list
  135        | '*' pointer
  136        | '*' type_qualifier_list pointer

  137 type_qualifier_list: type_qualifier
  138                    | type_qualifier_list type_qualifier

  139 parameter_type_list: parameter_list
  140                    | parameter_list ',' ELLIPSES

  141 parameter_list: parameter_declaration
  142               | parameter_list ',' parameter_declaration

  143 parameter_declaration: declaration_specifiers declarator
  144                      | declaration_specifiers

  145 identifier_list: IDENTIFIER
  146                | identifier_list ',' IDENTIFIER

  147 type_name: specifier_qualifier_list

  148 initializer: assignment_expression
  149            | '{' initializer_list '}'
  150            | '{' initializer_list ',' '}'

  151 initializer_list: initializer
  152                 | initializer_list ',' initializer
  153                 | initializer_list ',' designation initializer

  154 designation: designator_list '='

  155 designator_list: designator
  156                | designator_list designator

  157 designator: '[' constant_expression ']'
  158           | '.' IDENTIFIER

  159 statement: labeled_statement
  160          | compound_statement
  161          | expression_statement
  162          | selection_statement
  163          | iteration_statement
  164          | jump_statement

  165 labeled_statement: IDENTIFIER ':' statement
  166                  | CASE_KEYWORD constant_expression ':' statement
  167                  | DEFAULT_KEYWORD ':' statement

  168 compound_statement: '{' '}'
  169                   | '{' block_item_list '}'

  170 block_item_list: block_item
  171                | block_item_list M block_item

  172 block_item: declaration
  173           | statement

  174 expression_statement: ';'
  175                     | expression ';'

  176 selection_statement: IF_KEYWORD '(' expression N ')' M statement N
  177                    | IF_KEYWORD '(' expression N ')' M statement N ELSE_KEYWORD M statement
  178                    | SWITCH_KEYWORD '(' expression ')' statement

  179 iteration_statement: WHILE_KEYWORD M '(' expression N ')' M statement
  180                    | DO_KEYWORD M statement M WHILE_KEYWORD '(' expression N ')' ';'
  181                    | FOR_KEYWORD '(' expression_statement M expression_statement N M expression N ')' M statement
  182                    | FOR_KEYWORD '(' declaration expression_statement expression ')' statement

  183 jump_statement: GOTO_KEYWORD IDENTIFIER ';'
  184               | CONTINUE_KEYWORD ';'
  185               | BREAK_KEYWORD ';'
  186               | RETURN_KEYWORD ';'
  187               | RETURN_KEYWORD expression ';'

  188 translation_unit: external_declaration
  189                 | translation_unit external_declaration

  190 external_declaration: function_definition
  191                     | declaration

  192 function_definition: declaration_specifiers declarator declaration_list compound_statement
  193                    | declaration_specifiers declarator O compound_statement

  194 declaration_list: declaration
  195                 | declaration_list declaration

  196 M: %empty

  197 N: %empty

  198 O: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 28
'%' (37) 34
'&' (38) 23 50
'(' (40) 6 9 10 15 16 30 120 130 131 132 176 177 178 179 180 181 182
')' (41) 6 9 10 15 16 30 120 130 131 132 176 177 178 179 180 181 182
'*' (42) 24 32 128 129 133 134 135 136
'+' (43) 25 36
',' (44) 16 18 75 89 140 142 146 150 152 153
'-' (45) 26 37
'.' (46) 11 158
'/' (47) 33
':' (58) 60 165 166 167
';' (59) 77 78 174 175 180 183 184 185 186 187
'<' (60) 42
'=' (61) 63 91 154
'>' (62) 43
'?' (63) 60
'[' (91) 8 121 122 123 124 125 126 127 128 129 157
']' (93) 8 121 122 123 124 125 126 127 128 129 157
'^' (94) 52
'{' (123) 15 16 149 150 168 169
'|' (124) 54
'}' (125) 15 16 149 150 168 169
'~' (126) 27
error (256)
AUTO_KEYWORD (258) 95
RESTRICT_KEYWORD (259) 114
UNSIGNED_KEYWORD (260) 105
BREAK_KEYWORD (261) 185
EXTERN_KEYWORD (262) 93
RETURN_KEYWORD (263) 186 187
VOID_KEYWORD (264) 97
CASE_KEYWORD (265) 166
FLOAT_KEYWORD (266) 102
SHORT_KEYWORD (267) 99
VOLATILE_KEYWORD (268) 115
CHAR_KEYWORD (269) 98
FOR_KEYWORD (270) 181 182
SIGNED_KEYWORD (271) 104
WHILE_KEYWORD (272) 179 180
CONST_KEYWORD (273) 113
GOTO_KEYWORD (274) 183
SIZEOF_KEYWORD (275)
BOOL_KEYWORD (276) 106
CONTINUE_KEYWORD (277) 184
IF_KEYWORD (278) 176 177
STATIC_KEYWORD (279) 94 125 126 127
COMPLEX_KEYWORD (280) 107
DEFAULT_KEYWORD (281) 167
INLINE_KEYWORD (282) 116
STRUCT_KEYWORD (283)
IMAGINARY_KEYWORD (284) 108
DO_KEYWORD (285) 180
INT_KEYWORD (286) 100
SWITCH_KEYWORD (287) 178
DOUBLE_KEYWORD (288) 103
LONG_KEYWORD (289) 101
TYPEDEF_KEYWORD (290) 92
ELSE_KEYWORD (291) 177
REGISTER_KEYWORD (292) 96
UNION_KEYWORD (293)
IDENTIFIER (294) 1 11 12 119 145 146 158 165 183
INTEGER_CONSTANT (295) 2
FLOAT_CONSTANT (296) 3
CHAR_CONSTANT (297) 4
STRING_LITERAL (298) 5
VAL_AT (299) 12
PLUS_PLUS (300) 13 20
MINUS_MINUS (301) 14 21
LEFT_SHIFT (302) 39
RIGHT_SHIFT (303) 40
LESS_EQUAL (304) 44
GREATER_EQUAL (305) 45
EQUAL_EQUAL (306) 47
NOT_EQUAL (307) 48
LOGICAL_AND (308) 56
LOGICAL_OR (309) 58
ELLIPSES (310) 140
STAR_EQUAL (311) 64
BY_EQUAL (312) 65
PERCENT_EQUAL (313) 66
PLUS_EQUAL (314) 67
MINUS_EQUAL (315) 68
LEFT_SHIFT_EQUAL (316) 69
RIGHT_SHIFT_EQUAL (317) 70
AND_EQUAL (318) 71
BITWISENOT_EQUAL (319) 72
OR_EQUAL (320) 73
IF_CONFLICT (321)


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
primary_expression (92)
    on left: 1 2 3 4 5 6, on right: 7
postfix_expression (93)
    on left: 7 8 9 10 11 12 13 14 15 16, on right: 8 9 10 11 12 13
    14 19
argument_expression_list (94)
    on left: 17 18, on right: 10 18
unary_expression (95)
    on left: 19 20 21 22, on right: 20 21 29 62
unary_operator (96)
    on left: 23 24 25 26 27 28, on right: 22
cast_expression (97)
    on left: 29 30, on right: 22 30 31 32 33 34
multiplicative_expression (98)
    on left: 31 32 33 34, on right: 32 33 34 35 36 37
additive_expression (99)
    on left: 35 36 37, on right: 36 37 38 39 40
shift_expression (100)
    on left: 38 39 40, on right: 39 40 41 42 43 44 45
relational_expression (101)
    on left: 41 42 43 44 45, on right: 42 43 44 45 46 47 48
equality_expression (102)
    on left: 46 47 48, on right: 47 48 49 50
and_expression (103)
    on left: 49 50, on right: 50 51 52
exclusive_or_expression (104)
    on left: 51 52, on right: 52 53 54
inclusive_or_expression (105)
    on left: 53 54, on right: 54 55 56
logical_and_expression (106)
    on left: 55 56, on right: 56 57 58
logical_or_expression (107)
    on left: 57 58, on right: 58 59 60
conditional_expression (108)
    on left: 59 60, on right: 60 61 76
assignment_expression (109)
    on left: 61 62, on right: 17 18 62 74 75 121 122 125 126 127 148
assignment_operator (110)
    on left: 63 64 65 66 67 68 69 70 71 72 73, on right: 62
expression (111)
    on left: 74 75, on right: 6 8 60 75 175 176 177 178 179 180 181
    182 187
constant_expression (112)
    on left: 76, on right: 157 166
declaration (113)
    on left: 77 78, on right: 172 182 191 194 195
declaration_specifiers (114)
    on left: 79 80 82 83 84 85 86 87, on right: 77 78 80 83 85 87 143
    144 192 193
$@1 (115)
    on left: 81, on right: 82
init_declarator_list (116)
    on left: 88 89, on right: 78 89
init_declarator (117)
    on left: 90 91, on right: 88 89
storage_class_specifier (118)
    on left: 92 93 94 95 96, on right: 79 80
type_specifier (119)
    on left: 97 98 99 100 101 102 103 104 105 106 107 108, on right:
    82 83 109 110
specifier_qualifier_list (120)
    on left: 109 110 111 112, on right: 109 111 147
type_qualifier (121)
    on left: 113 114 115, on right: 84 85 111 112 137 138
function_specifier (122)
    on left: 116, on right: 86 87
declarator (123)
    on left: 117 118, on right: 90 91 120 143 192 193
direct_declarator (124)
    on left: 119 120 121 122 123 124 125 126 127 128 129 130 131 132,
    on right: 117 118 121 122 123 124 125 126 127 128 129 130 131 132
pointer (125)
    on left: 133 134 135 136, on right: 117 135 136
type_qualifier_list (126)
    on left: 137 138, on right: 121 123 125 127 128 134 136 138
parameter_type_list (127)
    on left: 139 140, on right: 130
parameter_list (128)
    on left: 141 142, on right: 139 140 142
parameter_declaration (129)
    on left: 143 144, on right: 141 142
identifier_list (130)
    on left: 145 146, on right: 131 146
type_name (131)
    on left: 147, on right: 15 16 30
initializer (132)
    on left: 148 149 150, on right: 91 151 152 153
initializer_list (133)
    on left: 151 152 153, on right: 15 16 149 150 152 153
designation (134)
    on left: 154, on right: 153
designator_list (135)
    on left: 155 156, on right: 154 156
designator (136)
    on left: 157 158, on right: 155 156
statement (137)
    on left: 159 160 161 162 163 164, on right: 165 166 167 173 176
    177 178 179 180 181 182
labeled_statement (138)
    on left: 165 166 167, on right: 159
compound_statement (139)
    on left: 168 169, on right: 160 192 193
block_item_list (140)
    on left: 170 171, on right: 169 171
block_item (141)
    on left: 172 173, on right: 170 171
expression_statement (142)
    on left: 174 175, on right: 161 181 182
selection_statement (143)
    on left: 176 177 178, on right: 162
iteration_statement (144)
    on left: 179 180 181 182, on right: 163
jump_statement (145)
    on left: 183 184 185 186 187, on right: 164
translation_unit (146)
    on left: 188 189, on right: 0 189
external_declaration (147)
    on left: 190 191, on right: 188 189
function_definition (148)
    on left: 192 193, on right: 190
declaration_list (149)
    on left: 194 195, on right: 192 195
M (150)
    on left: 196, on right: 56 58 60 171 176 177 179 180 181
N (151)
    on left: 197, on right: 60 176 177 179 180 181
O (152)
    on left: 198, on right: 193


State 0

    0 $accept: . translation_unit $end

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    UNSIGNED_KEYWORD   shift, and go to state 3
    EXTERN_KEYWORD     shift, and go to state 4
    VOID_KEYWORD       shift, and go to state 5
    FLOAT_KEYWORD      shift, and go to state 6
    SHORT_KEYWORD      shift, and go to state 7
    VOLATILE_KEYWORD   shift, and go to state 8
    CHAR_KEYWORD       shift, and go to state 9
    SIGNED_KEYWORD     shift, and go to state 10
    CONST_KEYWORD      shift, and go to state 11
    BOOL_KEYWORD       shift, and go to state 12
    STATIC_KEYWORD     shift, and go to state 13
    COMPLEX_KEYWORD    shift, and go to state 14
    INLINE_KEYWORD     shift, and go to state 15
    IMAGINARY_KEYWORD  shift, and go to state 16
    INT_KEYWORD        shift, and go to state 17
    DOUBLE_KEYWORD     shift, and go to state 18
    LONG_KEYWORD       shift, and go to state 19
    TYPEDEF_KEYWORD    shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    type_qualifier           go to state 26
    function_specifier       go to state 27
    translation_unit         go to state 28
    external_declaration     go to state 29
    function_definition      go to state 30


State 1

   95 storage_class_specifier: AUTO_KEYWORD .

    $default  reduce using rule 95 (storage_class_specifier)


State 2

  114 type_qualifier: RESTRICT_KEYWORD .

    $default  reduce using rule 114 (type_qualifier)


State 3

  105 type_specifier: UNSIGNED_KEYWORD .

    $default  reduce using rule 105 (type_specifier)


State 4

   93 storage_class_specifier: EXTERN_KEYWORD .

    $default  reduce using rule 93 (storage_class_specifier)


State 5

   97 type_specifier: VOID_KEYWORD .

    $default  reduce using rule 97 (type_specifier)


State 6

  102 type_specifier: FLOAT_KEYWORD .

    $default  reduce using rule 102 (type_specifier)


State 7

   99 type_specifier: SHORT_KEYWORD .

    $default  reduce using rule 99 (type_specifier)


State 8

  115 type_qualifier: VOLATILE_KEYWORD .

    $default  reduce using rule 115 (type_qualifier)


State 9

   98 type_specifier: CHAR_KEYWORD .

    $default  reduce using rule 98 (type_specifier)


State 10

  104 type_specifier: SIGNED_KEYWORD .

    $default  reduce using rule 104 (type_specifier)


State 11

  113 type_qualifier: CONST_KEYWORD .

    $default  reduce using rule 113 (type_qualifier)


State 12

  106 type_specifier: BOOL_KEYWORD .

    $default  reduce using rule 106 (type_specifier)


State 13

   94 storage_class_specifier: STATIC_KEYWORD .

    $default  reduce using rule 94 (storage_class_specifier)


State 14

  107 type_specifier: COMPLEX_KEYWORD .

    $default  reduce using rule 107 (type_specifier)


State 15

  116 function_specifier: INLINE_KEYWORD .

    $default  reduce using rule 116 (function_specifier)


State 16

  108 type_specifier: IMAGINARY_KEYWORD .

    $default  reduce using rule 108 (type_specifier)


State 17

  100 type_specifier: INT_KEYWORD .

    $default  reduce using rule 100 (type_specifier)


State 18

  103 type_specifier: DOUBLE_KEYWORD .

    $default  reduce using rule 103 (type_specifier)


State 19

  101 type_specifier: LONG_KEYWORD .

    $default  reduce using rule 101 (type_specifier)


State 20

   92 storage_class_specifier: TYPEDEF_KEYWORD .

    $default  reduce using rule 92 (storage_class_specifier)


State 21

   96 storage_class_specifier: REGISTER_KEYWORD .

    $default  reduce using rule 96 (storage_class_specifier)


State 22

  191 external_declaration: declaration .

    $default  reduce using rule 191 (external_declaration)


State 23

   77 declaration: declaration_specifiers . ';'
   78            | declaration_specifiers . init_declarator_list ';'
  192 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  193                    | declaration_specifiers . declarator O compound_statement

    IDENTIFIER  shift, and go to state 31
    '('         shift, and go to state 32
    '*'         shift, and go to state 33
    ';'         shift, and go to state 34

    init_declarator_list  go to state 35
    init_declarator       go to state 36
    declarator            go to state 37
    direct_declarator     go to state 38
    pointer               go to state 39


State 24

   79 declaration_specifiers: storage_class_specifier .
   80                       | storage_class_specifier . declaration_specifiers

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    UNSIGNED_KEYWORD   shift, and go to state 3
    EXTERN_KEYWORD     shift, and go to state 4
    VOID_KEYWORD       shift, and go to state 5
    FLOAT_KEYWORD      shift, and go to state 6
    SHORT_KEYWORD      shift, and go to state 7
    VOLATILE_KEYWORD   shift, and go to state 8
    CHAR_KEYWORD       shift, and go to state 9
    SIGNED_KEYWORD     shift, and go to state 10
    CONST_KEYWORD      shift, and go to state 11
    BOOL_KEYWORD       shift, and go to state 12
    STATIC_KEYWORD     shift, and go to state 13
    COMPLEX_KEYWORD    shift, and go to state 14
    INLINE_KEYWORD     shift, and go to state 15
    IMAGINARY_KEYWORD  shift, and go to state 16
    INT_KEYWORD        shift, and go to state 17
    DOUBLE_KEYWORD     shift, and go to state 18
    LONG_KEYWORD       shift, and go to state 19
    TYPEDEF_KEYWORD    shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers   go to state 40
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    type_qualifier           go to state 26
    function_specifier       go to state 27


State 25

   82 declaration_specifiers: type_specifier . $@1
   83                       | type_specifier . declaration_specifiers

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    UNSIGNED_KEYWORD   shift, and go to state 3
    EXTERN_KEYWORD     shift, and go to state 4
    VOID_KEYWORD       shift, and go to state 5
    FLOAT_KEYWORD      shift, and go to state 6
    SHORT_KEYWORD      shift, and go to state 7
    VOLATILE_KEYWORD   shift, and go to state 8
    CHAR_KEYWORD       shift, and go to state 9
    SIGNED_KEYWORD     shift, and go to state 10
    CONST_KEYWORD      shift, and go to state 11
    BOOL_KEYWORD       shift, and go to state 12
    STATIC_KEYWORD     shift, and go to state 13
    COMPLEX_KEYWORD    shift, and go to state 14
    INLINE_KEYWORD     shift, and go to state 15
    IMAGINARY_KEYWORD  shift, and go to state 16
    INT_KEYWORD        shift, and go to state 17
    DOUBLE_KEYWORD     shift, and go to state 18
    LONG_KEYWORD       shift, and go to state 19
    TYPEDEF_KEYWORD    shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 81 ($@1)

    declaration_specifiers   go to state 41
    $@1                      go to state 42
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    type_qualifier           go to state 26
    function_specifier       go to state 27


State 26

   84 declaration_specifiers: type_qualifier .
   85                       | type_qualifier . declaration_specifiers

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    UNSIGNED_KEYWORD   shift, and go to state 3
    EXTERN_KEYWORD     shift, and go to state 4
    VOID_KEYWORD       shift, and go to state 5
    FLOAT_KEYWORD      shift, and go to state 6
    SHORT_KEYWORD      shift, and go to state 7
    VOLATILE_KEYWORD   shift, and go to state 8
    CHAR_KEYWORD       shift, and go to state 9
    SIGNED_KEYWORD     shift, and go to state 10
    CONST_KEYWORD      shift, and go to state 11
    BOOL_KEYWORD       shift, and go to state 12
    STATIC_KEYWORD     shift, and go to state 13
    COMPLEX_KEYWORD    shift, and go to state 14
    INLINE_KEYWORD     shift, and go to state 15
    IMAGINARY_KEYWORD  shift, and go to state 16
    INT_KEYWORD        shift, and go to state 17
    DOUBLE_KEYWORD     shift, and go to state 18
    LONG_KEYWORD       shift, and go to state 19
    TYPEDEF_KEYWORD    shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    type_qualifier           go to state 26
    function_specifier       go to state 27


State 27

   86 declaration_specifiers: function_specifier .
   87                       | function_specifier . declaration_specifiers

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    UNSIGNED_KEYWORD   shift, and go to state 3
    EXTERN_KEYWORD     shift, and go to state 4
    VOID_KEYWORD       shift, and go to state 5
    FLOAT_KEYWORD      shift, and go to state 6
    SHORT_KEYWORD      shift, and go to state 7
    VOLATILE_KEYWORD   shift, and go to state 8
    CHAR_KEYWORD       shift, and go to state 9
    SIGNED_KEYWORD     shift, and go to state 10
    CONST_KEYWORD      shift, and go to state 11
    BOOL_KEYWORD       shift, and go to state 12
    STATIC_KEYWORD     shift, and go to state 13
    COMPLEX_KEYWORD    shift, and go to state 14
    INLINE_KEYWORD     shift, and go to state 15
    IMAGINARY_KEYWORD  shift, and go to state 16
    INT_KEYWORD        shift, and go to state 17
    DOUBLE_KEYWORD     shift, and go to state 18
    LONG_KEYWORD       shift, and go to state 19
    TYPEDEF_KEYWORD    shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    type_qualifier           go to state 26
    function_specifier       go to state 27


State 28

    0 $accept: translation_unit . $end
  189 translation_unit: translation_unit . external_declaration

    $end               shift, and go to state 45
    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    UNSIGNED_KEYWORD   shift, and go to state 3
    EXTERN_KEYWORD     shift, and go to state 4
    VOID_KEYWORD       shift, and go to state 5
    FLOAT_KEYWORD      shift, and go to state 6
    SHORT_KEYWORD      shift, and go to state 7
    VOLATILE_KEYWORD   shift, and go to state 8
    CHAR_KEYWORD       shift, and go to state 9
    SIGNED_KEYWORD     shift, and go to state 10
    CONST_KEYWORD      shift, and go to state 11
    BOOL_KEYWORD       shift, and go to state 12
    STATIC_KEYWORD     shift, and go to state 13
    COMPLEX_KEYWORD    shift, and go to state 14
    INLINE_KEYWORD     shift, and go to state 15
    IMAGINARY_KEYWORD  shift, and go to state 16
    INT_KEYWORD        shift, and go to state 17
    DOUBLE_KEYWORD     shift, and go to state 18
    LONG_KEYWORD       shift, and go to state 19
    TYPEDEF_KEYWORD    shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    type_qualifier           go to state 26
    function_specifier       go to state 27
    external_declaration     go to state 46
    function_definition      go to state 30


State 29

  188 translation_unit: external_declaration .

    $default  reduce using rule 188 (translation_unit)


State 30

  190 external_declaration: function_definition .

    $default  reduce using rule 190 (external_declaration)


State 31

  119 direct_declarator: IDENTIFIER .

    $default  reduce using rule 119 (direct_declarator)


State 32

  120 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 31
    '('         shift, and go to state 32
    '*'         shift, and go to state 33

    declarator         go to state 47
    direct_declarator  go to state 38
    pointer            go to state 39


State 33

  133 pointer: '*' .
  134        | '*' . type_qualifier_list
  135        | '*' . pointer
  136        | '*' . type_qualifier_list pointer

    RESTRICT_KEYWORD  shift, and go to state 2
    VOLATILE_KEYWORD  shift, and go to state 8
    CONST_KEYWORD     shift, and go to state 11
    '*'               shift, and go to state 33

    $default  reduce using rule 133 (pointer)

    type_qualifier       go to state 48
    pointer              go to state 49
    type_qualifier_list  go to state 50


State 34

   77 declaration: declaration_specifiers ';' .

    $default  reduce using rule 77 (declaration)


State 35

   78 declaration: declaration_specifiers init_declarator_list . ';'
   89 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 51
    ';'  shift, and go to state 52


State 36

   88 init_declarator_list: init_declarator .

    $default  reduce using rule 88 (init_declarator_list)


State 37

   90 init_declarator: declarator .
   91                | declarator . '=' initializer
  192 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  193                    | declaration_specifiers declarator . O compound_statement

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    UNSIGNED_KEYWORD   shift, and go to state 3
    EXTERN_KEYWORD     shift, and go to state 4
    VOID_KEYWORD       shift, and go to state 5
    FLOAT_KEYWORD      shift, and go to state 6
    SHORT_KEYWORD      shift, and go to state 7
    VOLATILE_KEYWORD   shift, and go to state 8
    CHAR_KEYWORD       shift, and go to state 9
    SIGNED_KEYWORD     shift, and go to state 10
    CONST_KEYWORD      shift, and go to state 11
    BOOL_KEYWORD       shift, and go to state 12
    STATIC_KEYWORD     shift, and go to state 13
    COMPLEX_KEYWORD    shift, and go to state 14
    INLINE_KEYWORD     shift, and go to state 15
    IMAGINARY_KEYWORD  shift, and go to state 16
    INT_KEYWORD        shift, and go to state 17
    DOUBLE_KEYWORD     shift, and go to state 18
    LONG_KEYWORD       shift, and go to state 19
    TYPEDEF_KEYWORD    shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21
    '='                shift, and go to state 53

    '{'       reduce using rule 198 (O)
    $default  reduce using rule 90 (init_declarator)

    declaration              go to state 54
    declaration_specifiers   go to state 55
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    type_qualifier           go to state 26
    function_specifier       go to state 27
    declaration_list         go to state 56
    O                        go to state 57


State 38

  118 declarator: direct_declarator .
  121 direct_declarator: direct_declarator . '[' type_qualifier_list assignment_expression ']'
  122                  | direct_declarator . '[' assignment_expression ']'
  123                  | direct_declarator . '[' type_qualifier_list ']'
  124                  | direct_declarator . '[' ']'
  125                  | direct_declarator . '[' STATIC_KEYWORD type_qualifier_list assignment_expression ']'
  126                  | direct_declarator . '[' STATIC_KEYWORD assignment_expression ']'
  127                  | direct_declarator . '[' type_qualifier_list STATIC_KEYWORD assignment_expression ']'
  128                  | direct_declarator . '[' type_qualifier_list '*' ']'
  129                  | direct_declarator . '[' '*' ']'
  130                  | direct_declarator . '(' parameter_type_list ')'
  131                  | direct_declarator . '(' identifier_list ')'
  132                  | direct_declarator . '(' ')'

    '('  shift, and go to state 58
    '['  shift, and go to state 59

    $default  reduce using rule 118 (declarator)


State 39

  117 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 31
    '('         shift, and go to state 32

    direct_declarator  go to state 60


State 40

   80 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 80 (declaration_specifiers)


State 41

   83 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 83 (declaration_specifiers)


State 42

   82 declaration_specifiers: type_specifier $@1 .

    $default  reduce using rule 82 (declaration_specifiers)


State 43

   85 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 85 (declaration_specifiers)


State 44

   87 declaration_specifiers: function_specifier declaration_specifiers .

    $default  reduce using rule 87 (declaration_specifiers)


State 45

    0 $accept: translation_unit $end .

    $default  accept


State 46

  189 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 189 (translation_unit)


State 47

  120 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 61


State 48

  137 type_qualifier_list: type_qualifier .

    $default  reduce using rule 137 (type_qualifier_list)


State 49

  135 pointer: '*' pointer .

    $default  reduce using rule 135 (pointer)


State 50

  134 pointer: '*' type_qualifier_list .
  136        | '*' type_qualifier_list . pointer
  138 type_qualifier_list: type_qualifier_list . type_qualifier
